staging/ingress/posts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: posts-ingress
  namespace: staging
spec:
  rules:
  - host: staging.posts.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rest-internal-service
            port: 
              number: 8000
  ingressClassName: nginx

---

apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata: 
  name: nginx
  namespace: staging
spec:
  controller: k8s.io/ingress-nginx
